# hyprtiler

./: LICENSE.txt  README.md  build.sh  hyprwindow.py  hyprwindow.spec  main.py  make.sh  pyproject.toml  teste.sh
src/hyprtiler/: __init__.py  click.py  constants.py  kernel.py
src/hyprwindow/: __about__.py  __main__.py  app.py  common.py  config.py  hyprwindow.py
tests/: __init__.py
