[project]
name            = "hyprwindow"
version         = "0.1.4"
description     = "A utility tool for managing windows in the Hyprland compositor environment."
readme          = "README.md"
authors         = [{ name = "Antrax", email = "fredcox@gmail.com" }]
requires-python = ">=3.13"
license         = { text = "MIT" }
dependencies    = ["confz>=2.1.0", "rich>=14.0.0"]

[project.urls]
homepage   = "https://github.com/antrax2024/hyprwindow"
Repository = "https://github.com/antrax2024/hyprwindow"

[project.scripts]
hyprwindow = "hyprwindow:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
